<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.museumguild.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/introduction"
        android:gravity="center"
        android:background="@color/backcolor"
        android:textColor="@color/white"
        android:textSize="28sp"/>
    <ImageView
        android:id="@+id/testid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_musuem_info2"
        android:layout_weight="1.48" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10.66"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/adult"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:checked="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/adult"
            />
        <RadioButton
            android:id="@+id/child"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="40dp"
            android:text="@string/child"
            />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7.04"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/language"
                android:layout_width="100dp"
                android:layout_height="32dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/languagechange" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                >
                <CheckBox
                    android:id="@+id/notifycheck"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/notify"
                    android:textColor="@color/black"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
                <TextView
                    android:id="@+id/notifyitems"
                    android:layout_alignParentTop="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_toRightOf="@id/notifycheck"
                    android:text="@string/notifyitems"
                    android:textColor="@color/backcolor"/>
            </RelativeLayout>

        </LinearLayout>

        <Button
            android:id="@+id/paybutton"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/buttonclick"
            android:text="￥ 支付并观看"
            android:textSize="14sp"
            android:textColor="@color/white" />
    </LinearLayout>

</LinearLayout>
