<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/custom_dialog_bg"
    android:orientation="vertical" >
    
    <!-- 标题 -->
    <LinearLayout 
        android:id="@+id/custom_dialog_title_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/custom_dialog_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_dialog_title_margin"
            android:textColor="@color/custom_dialog_title"
            android:textSize="@dimen/custom_dialog_title_text_size"
            android:text="@string/custom_dialog_title"/>
        <View 
            android:layout_width="match_parent"
            android:layout_height="@dimen/custom_dialog_title_divider_height"
            android:background="@color/custom_dialog_title_divider"/>
    </LinearLayout>
    
    <!-- 提示信息 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/custom_dialog_msg_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/custom_dialog_title_margin"
            android:textSize="@dimen/custom_dialog_msg_text_size"
            android:textColor="@color/custom_dialog_msg"
            android:text="@string/custom_dialog_msg"/>
    </LinearLayout>
    
    <View style="@style/divider_horizontal"/>
    
    <!-- 按钮 -->
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!-- 左边按钮 -->
        <Button 
            android:id="@+id/custom_dialog_left_btn"
            style="@style/custom_dialog_btn"
            android:text="@string/custom_dialog_btn"/>
        
        <View android:id="@+id/custom_dialog_divider_left" style="@style/divider_vertical"/>
        
        <!-- 中间按钮 -->
        <Button 
            android:id="@+id/custom_dialog_middle_btn"
            style="@style/custom_dialog_btn"
            android:text="@string/custom_dialog_btn"/>
        
        <View android:id="@+id/custom_dialog_divider_right" style="@style/divider_vertical"/>
        
        <!-- 右边按钮 -->
        <Button 
            android:id="@+id/custom_dialog_right_btn"
            style="@style/custom_dialog_btn"
            android:text="@string/custom_dialog_btn"/>
    </LinearLayout>

</LinearLayout>
